--- a/nfl_predictionv2.Rmd
+++ b/nfl_predictionv2.Rmd
@@ -162,7 +162,6 @@ NFL_DATA_TRAIN_Modified$OnDefense <-
   )
 NFL_DATA_TRAIN_Modified$OnDefense = factor(NFL_DATA_TRAIN_Modified$OnDefense)
 
-
 # Add the age of the running player
 # Change the birth dates to strings
 NFL_DATA_TRAIN_Modified$PlayerBirthDate = as.character(NFL_DATA_TRAIN_Modified$PlayerBirthDate)
@@ -177,7 +176,10 @@ Years_Lived = NFL_DATA_TRAIN_Modified$Season - as.numeric(Birth_Year)
 Total_Years_Lived = Years_Lived + How_Much_Of_Year_Lived
 NFL_DATA_TRAIN_Modified$PlayerAge = Total_Years_Lived
 
+# Changes Game Clock to Seconds. Divide by 60 to get minutes then round and factor. Just Minutes
+NFL_DATA_TRAIN_Modified$GameClock = as.numeric(NFL_DATA_TRAIN_Modified$GameClock)
 
+#NFL_DATA_TRAIN_Modified$GameClock = factor(NFL_DATA_TRAIN_Modified$GameClock)
 
 # MORE EXPLORATION WITH NEW COVARIATES
 
@@ -226,16 +228,94 @@ plot_ly(
 # Play direction, Yards, PlayerHeight, PlayerWeight, PlayerBirthDate, HomeTeamAbbr
 # AwayTeamAbbr, Week, StadiumType, Turf, GameWeather, Temperature, Humidity
 ```{r}
+# Data we want
+# GameId, PlayId, Team, X, Y, NFLID, Quarter, GameClock, PossesionTeam
+# Down, Distance, HomeScoreBeforePlay, VisitorScoreBeforePlay, NflIdRusher,
+# OffenseFormation, OffensePersonel, DefendersinBox, DefensePersonel, 
+# Play direction, Yards, PlayerHeight, PlayerWeight, PlayerBirthDate, HomeTeamAbbr
+# AwayTeamAbbr, Week, StadiumType, Turf, GameWeather, Temperature, Humidity
+#View(NFL_DATA_TRAIN_Modified)
 # Drop columns that are not important to df
-NFL_DATA_TRAIN_Complete_Modified = select(NFL_DATA_TRAIN_Modified, 
+NFL_DATA_TRAIN_Filtered = select(NFL_DATA_TRAIN_Modified, 
                                           -GameId, -PlayId, -Team, -S, -A, -Dis,
                                           -Orientation, -Dir, -DisplayName, -JerseyNumber,
                                           -YardLine, -FieldPosition, -HomeScoreBeforePlay,
                                           -VisitorScoreBeforePlay, -NflId, -TimeHandoff,
                                           -TimeSnap, -PlayerBirthDate, -PlayerCollegeName, -Location,
-                                          -WindSpeed, -WindDirection)
-#View(NFL_DATA_TRAIN_Complete_Modified)
+                                          -WindSpeed, -WindDirection, -StadiumType, -Turf,
+                                 -
+                                 -GameWeather) # Turf and stadium type all captured in stadium
+#View(NFL_DATA_TRAIN_Filtered) # drop game weather, captured in Week, and Stadium. Also too many missing values
 ```
+
+```{r}
+# NEED TO DO MORE DATA CLEANING. How to Handle Missing Data. How to Handle Only 1 observations
+
+# Need to count how many NA / Empty cells there are for each column
+#summary(NFL_DATA_TRAIN_Filtered)  # changed empty to NA when reading in file
+# GameWeather, Temperature, Humidy all have missing or NA data
+# sum(is.na(NFL_DATA_TRAIN_Filtered$GameWeather))
+# sum(NFL_DATA_TRAIN_Filtered$GameWeather == "")
+
+# Need to delete a row within a column if there is just 1 special case. (Ex. DefensivePersonnel) (reduces observations by 11)
+NFL_DATA_TRAIN_Filtered = NFL_DATA_TRAIN_Filtered[unsplit(table(NFL_DATA_TRAIN_Filtered$DefensePersonnel), NFL_DATA_TRAIN_Filtered$DefensePersonnel) >= 3, ]
+# Same for OffensePersonnel (reduces by 18 observations)
+NFL_DATA_TRAIN_Filtered = NFL_DATA_TRAIN_Filtered[unsplit(table(NFL_DATA_TRAIN_Filtered$OffensePersonnel), NFL_DATA_TRAIN_Filtered$OffensePersonnel) >= 3, ]
+
+# Factor the Downs
+NFL_DATA_TRAIN_Filtered$Down = factor(NFL_DATA_TRAIN_Filtered$Down)
+
+# Factor NFLIDRusher
+NFL_DATA_TRAIN_Filtered$NflIdRusher = factor(NFL_DATA_TRAIN_Filtered$NflIdRusher) 
+NFL_DATA_TRAIN_Filtered = NFL_DATA_TRAIN_Filtered[unsplit(table(NFL_DATA_TRAIN_Filtered$NflIdRusher), NFL_DATA_TRAIN_Filtered$NflIdRusher) >= 3, ]
+
+# Factor, height, stadium, position
+NFL_DATA_TRAIN_Filtered$PlayerHeight = factor(NFL_DATA_TRAIN_Filtered$PlayerHeight)
+NFL_DATA_TRAIN_Filtered$Stadium = factor(NFL_DATA_TRAIN_Filtered$Stadium)
+NFL_DATA_TRAIN_Filtered$Position = factor(NFL_DATA_TRAIN_Filtered$Position)
+
+# Need to remove NA Rows: Still 16,631 observations
+NFL_DATA_TRAIN_Filtered_Final <- na.omit(NFL_DATA_TRAIN_Filtered)
+#View(NFL_DATA_TRAIN_Filtered_Final)
+```
+
+#player height
+#player weight
+#position
+```{r}
+NFL_Train_Total_Model = lm(Yards ~ ., data=NFL_DATA_TRAIN_Filtered_Final)
+NFL_Train_Total_Model
+RMSE_NFL = sqrt(mean((NFL_DATA_TRAIN_Filtered_Final$Yards - predict(NFL_Train_Total_Model, NFL_DATA_TRAIN_Filtered_Final)) ^ 2)) 
+RMSE_NFL # =  6.2419 yards 
+
+# What if we always predicted the mean of yards? (Just Intercept Term)
+NFL_Train_Total_Model1 = lm(Yards ~ 1, data=NFL_DATA_TRAIN_Filtered_Final)
+NFL_Train_Total_Model1
+RMSE_NFL1 = sqrt(mean((NFL_DATA_TRAIN_Filtered_Final$Yards - predict(NFL_Train_Total_Model1, NFL_DATA_TRAIN_Filtered_Final)) ^ 2)) 
+RMSE_NFL1 # =  6.4145 yards  (So what we currently have is a slight improvement)
+
+# Forward Stepwise Regression
+min_model = NFL_Train_Total_Model1
+max_model = NFL_Train_Total_Model
+stepwise_model = step(min_model, direction='forward', scope=max_model)
+summary(stepwise_model)
+# Ultimately, this is saying that the extra info we gain is not worth the complexity
+```
+
+# Backward Stepwise Regerssion
+
+backward_step = step(max_model, direction='backward')
+backward_step # Best Model is Season, Distance, Defenders in Box, Temp, Humidity, and Homescore advantage
+RMSE_NFL_Backward = sqrt(mean((NFL_DATA_TRAIN_Filtered_Final$Yards - predict(backward_step, NFL_DATA_TRAIN_Filtered_Final)) ^ 2)) 
+RMSE_NFL_Backward #  = 6.3553
+
+# Lasso and Ridge Regression
+x = select(NFL_DATA_TRAIN_Filtered_Final, -Yards)
+y = NFL_DATA_TRAIN_Filtered_Final$Yards
+ridge_mod = glmnet(x, y, alpha = 0)
+
+
+
 
 
 what about home/away from original data set?
@@ -243,7 +323,6 @@ defenders in the box --> continous instead of categorical
 remove GameClock for now since it is unprocessed
 should quarter be categorical variable?
 NflIdRusher as categorical variable - does it matter if the first one is not 1? (ours is 2558918)
-```{r}
 # BASELINE ANALYSIS
 
 # Using all Covariates included the original NFL_Train, not using the 4 covariates we created
@@ -261,19 +340,8 @@ NFL_DATA_TRAIN_Old_Covariates = select(NFL_DATA_TRAIN_Complete_Modified,
 
 #NFL_DATA_TRAIN_Old_Covariates[is.na(NFL_DATA_TRAIN_Old_Covariates)] <- 0
 #cor(NFL_DATA_TRAIN_Old_Covariates, use="na.or.complete")
-```
-
-```{r}
-NFL_Train_Total_Model = lm(Yards ~ PlayerHeight + 
-                             PlayerWeight + HomeTeamAbbr +
-                             GameWeather + Temperature + Humidity,
-  data=NFL_DATA_TRAIN_Old_Covariates)
-summary(NFL_Train_Total_Model)
-
-```
 
 
-```{r}
 NFL_Train_Total_Model = lm(Yards ~ PlayerHeight + 
                              VisitorTeamAbbr + Week + StadiumType + Turf +
                              GameWeather + Temperature + Humidity,
@@ -290,5 +358,4 @@ summary(NFL_Train_Total_Model)
 # NFL_Train_Total_Model.cv
 
 
-```
 
